Servers/charts+values/echo-service/templates/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  namespace: solution
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`k8s.thecb4.io`)&& (PathPrefix(`/echo`)
      kind: Rule
      services:
        - name: echo-service
          port: 80
  # tls:
  #   secretName: vapor.thecb4.io-tls
